--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,29 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  position: relative;
 }
+
+a:hover {
+    color: #000;
+  }
+
+  a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+
+  a:hover::before {
+    transform: scaleX(1);
+  }
 
 * {
   box-sizing: border-box;
